--- a/src/CashFlow.Communication/CashFlow.Communication.csproj
+++ b/src/CashFlow.Communication/CashFlow.Communication.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CashFlow.Exception\CashFlow.Exception.csproj" />
+  </ItemGroup>
+
 </Project>
