configuring injection dependency

--- a/src/CashFlow.API/CashFlow.API.csproj
+++ b/src/CashFlow.API/CashFlow.API.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\CashFlow.App\CashFlow.App.csproj" />
     <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication.csproj" />
     <ProjectReference Include="..\CashFlow.Exception\CashFlow.Exception.csproj" />
+    <ProjectReference Include="..\CashFlow.Infra\CashFlow.Infra.csproj" />
   </ItemGroup>
 
 </Project>
