finalization of injection dependence

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /src/CashFlow.Infra/DataAccess/CashFlowDbContext.cs
+/src/CashFlow.API/appsettings.Development.json
