--- a/src/CashFlow.App/CashFlow.App.csproj
+++ b/src/CashFlow.App/CashFlow.App.csproj
@@ -7,11 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Validations\Reports\PDF\Fonts\Raleway-Black.ttf" />
+    <None Remove="Validations\Reports\PDF\Fonts\Raleway-Regular.ttf" />
+    <None Remove="Validations\Reports\PDF\Fonts\WorkSans-Black.ttf" />
+    <None Remove="Validations\Reports\PDF\Fonts\WorkSans-Regular.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Validations\Reports\PDF\Fonts\Raleway-Black.ttf" />
+    <EmbeddedResource Include="Validations\Reports\PDF\Fonts\Raleway-Regular.ttf" />
+    <EmbeddedResource Include="Validations\Reports\PDF\Fonts\WorkSans-Black.ttf" />
+    <EmbeddedResource Include="Validations\Reports\PDF\Fonts\WorkSans-Regular.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="ClosedXML" Version="0.102.3" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PDFsharp-MigraDoc" Version="6.1.1" />
   </ItemGroup>
 
   <ItemGroup>
