using profile photo

--- a/src/CashFlow.App/CashFlow.App.csproj
+++ b/src/CashFlow.App/CashFlow.App.csproj
@@ -36,4 +36,10 @@
     <ProjectReference Include="..\CashFlow.Infra\CashFlow.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Logo\ProfilePhoto.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
